fix issue with message overflow

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,11 +15,12 @@ body {
     flex-direction: column;
     border: solid black;
     width: 100%;
-    height: 98vh;
+    height: 100vh;
     background: #63A396;
 }
 #messages {
     flex-grow: 1;
+    overflow-y: scroll;
 }
 #form-container {
     display: flex;
